apps/portainer/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: portainer
  labels:
    app: portainer
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: portainer
  template:
    metadata:
      labels:
        app: portainer
    spec:
      serviceAccountName: portainer-sa-clusteradmin
      volumes:
        - name: "data"
          persistentVolumeClaim:
            claimName: portainer-pvc
      containers:
        - name: portainer
          image: "portainer/portainer-ce:2.39.3"
          imagePullPolicy: Always
          volumeMounts:
            - name: data
              mountPath: /data
          ports:
            - name: svc-9000-http
              containerPort: 9000
            - name: svc-9443-https
              containerPort: 9443
            - name: svc-8000-edge
              containerPort: 8000
          startupProbe:
            httpGet:
              path: /
              port: 9000
            failureThreshold: 30
            periodSeconds: 10
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: 9000
            periodSeconds: 10
            timeoutSeconds: 5
            failureThreshold: 3
          livenessProbe:
            httpGet:
              path: /
              port: 9000
            periodSeconds: 30
            timeoutSeconds: 5
            failureThreshold: 5
          resources:
            limits:
              memory: "128Mi"
              cpu: "100m"
            requests:
              memory: "32Mi"
              cpu: "5m"
