apps/portainer/service.yml
apiVersion: v1
kind: Service
metadata:
  name: portainer-ui-svc
spec:
  selector:
    app: portainer
  ports:
    - port: 9000
      name: 9000-tcp
